# rust-kf

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  macros.rs  main.rs  question.rs  tests.rs
src/ffi/: main.cpp  mod.rs  rust_headers.hpp  rust_headers.rs
src/filter/: angles.rs  constant_magnetic_field.rs  constant_magnetic_field_.rs  filter_gain.rs  filter_means.rs  jacobian.rs  linear.rs  macros.rs  mod.rs  prediction.rs  runge_kutta.rs  smoothing.rs  utils.rs
src/filter_gain_matrix/: filtering.rs  mod.rs  utils.rs
src/filter_weighted_means/: mod.rs  smoothing.rs
src/generate_data/: macros.rs  mod.rs  run.rs  setup.rs  statistics.rs  store.rs  structs.rs  traits.rs
src/generate_data/run/: const_b.rs  general.rs  linear.rs  mod.rs
src/geometry/: Rectangle.rs  Traits.rs  Trapezoid.rs  mod.rs  rectangle.rs  traits.rs  trapezoid.rs  utils.rs
tests/: angles.rs  change_mat_val.rs  filter_means_gains.rs  line.rs  linear_KF.rs  linear_global_hit_estimation.rs  plane_test.rs  seed_filter_vec.rs  traits_test.rs  transform_test.rs
