[package]
name = "kalman_rs"
version = "0.1.0"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Kalman filter implementation in rust (WIP)"

[dependencies]
nalgebra = "0.17.2"


#![allow(dead_code)]
#![allow(unused_imports)]
#[allow(unused_imports)]