[package]
name = "kalman_rs"
version = "0.1.3"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Kalman filter implementation in rust (WIP)"

[dependencies]
nalgebra = "0.18.0"
lazy_static = "1.3.0"

rand = {version = "0.7.0", features = ["small_rng"]}
rand_distr = "0.2.1"

hdrhistogram = "6.3.4"

rayon = "1.1.0"

csv = "1.1.1"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"

itertools = "0.8.0"